[package]
name = "db_querier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.0-alpha.3", features = [ "postgres", "runtime-tokio-native-tls", "time" ] }
anyhow = "1.0"
futures = "0.3"
structopt = "0.3"
tokio = { version = "1.20.0", features = ["rt", "macros"]}
dotenvy = "0.15.0"